// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Booking should handle BOOKING_CHANGE_FLIGHT_DATES 1`] = `
Object {
  "flightDates": Object {
    "departure": undefined,
    "return": undefined,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should handle BOOKING_CHANGE_FROM 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": "FOO",
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should handle BOOKING_CHANGE_PASSENGERS_NUMBER 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 0,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should handle BOOKING_CHANGE_TO 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": "FOO",
  "url": null,
}
`;

exports[`Booking should handle BOOKING_SET_INVALID 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": undefined,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should handle BOOKING_TOGGLE_PASSENGERS_DROPDOWN 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": true,
  "to": null,
  "url": null,
}
`;

exports[`Booking should handle BOOKING_UNSET_INVALID 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should handle BOOKING_URL_READY 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": "BAZ",
}
`;

exports[`Booking should handle TOGGLE_ROUND_TRIP 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": true,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should merge payload data to passengers object BOOKING_CHANGE_PASSENGERS_NUMBER 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 20,
    "total": 20,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;

exports[`Booking should return the initial state 1`] = `
Object {
  "flightDates": Object {
    "departure": null,
    "return": null,
  },
  "from": null,
  "invalid": null,
  "isRoundTrip": false,
  "passengers": Object {
    "adults": 1,
    "children": 0,
    "infants": 0,
    "total": 1,
  },
  "passengersDropdownIsOpen": false,
  "to": null,
  "url": null,
}
`;
